<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_produto"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navigation_drawer_item_label_1" />
        <item
            android:id="@+id/nav_cliente"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_drawer_item_label_2" />
        <item
            android:id="@+id/nav_pedido"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_drawer_item_label_3" />
    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
-->
</menu>
